--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "phpunit/phpunit": "^10.0",
         "humbug/box": "^4.0",
         "friendsofphp/php-cs-fixer": "^3.0",
-        "phpstan/phpstan": "^1.10",
-        "phpstan/extension-installer": "^1.3"
+        "phpstan/phpstan": "^1.10"
     },
     "autoload": {
         "psr-4": {
@@ -29,7 +28,13 @@
     ],
     "scripts": {
         "test": "phpunit",
-        "build": "box compile",
+        "build": "box compile --allow-composer-check-failure",
+        "test-build": [
+            "@test",
+            "@build",
+            "@test-build:verify"
+        ],
+        "test-build:verify": "php -r \"if (!file_exists('takeout-redate.phar')) { echo 'PHAR file not found'; exit(1); }\" && php takeout-redate.phar list",
         "cs-fix": "php-cs-fixer fix",
         "cs-check": "php-cs-fixer fix --dry-run --diff",
         "phpstan": "phpstan analyse",
@@ -41,8 +46,7 @@
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "php-http/discovery": true,
-            "phpstan/extension-installer": true
+            "php-http/discovery": true
         }
     },
     "minimum-stability": "stable",
