--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.4",
-        "symfony/console": "^6.0|^7.0"
+        "symfony/console": "^6.0|^7.0",
+        "symfony/process": "^6.0|^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
