--- a/.github/workflows/phar-integration-test.yml
+++ b/.github/workflows/phar-integration-test.yml
@@ -1,67 +1,16 @@
 name: PHAR Integration Test
 
 on:
-  # Run after main CI workflow completes (if it exists)
-  # Uncomment and adjust workflow name if you have a main CI workflow:
-  # workflow_run:
-  #   workflows: ["CI"]
-  #   types:
-  #     - completed
+  workflow_run:
+    workflows: ["CI"]
+    types:
+      - completed
   workflow_dispatch:  # Allow manual triggering
-  push:
-    branches:
-      - main
-      - master
-    paths:
-      - '**.php'
-      - 'box.json'
-      - 'composer.json'
-      - '.github/workflows/phar-integration-test.yml'
 
 jobs:
-  build-phar:
-    name: Build PHAR
-    runs-on: ubuntu-latest
-    outputs:
-      phar-artifact: ${{ steps.upload.outputs.artifact-name }}
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Needed for git-version in box.json
-      
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.4'
-          tools: composer
-      
-      - name: Install dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
-      
-      - name: Run tests
-        run: composer test
-      
-      - name: Build PHAR
-        run: composer build
-      
-      - name: Verify PHAR
-        run: |
-          php takeout-redate.phar list
-          php -r "echo 'PHAR size: ' . filesize('takeout-redate.phar') . ' bytes\n';"
-      
-      - name: Upload PHAR artifact
-        uses: actions/upload-artifact@v4
-        id: upload
-        with:
-          name: takeout-redate-phar
-          path: takeout-redate.phar
-          retention-days: 1
-
   test-phar-linux:
     name: Test PHAR on Linux
-    needs: build-phar
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     
     steps:
@@ -77,11 +26,15 @@ jobs:
       - name: Install dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
       
-      - name: Download PHAR artifact
-        uses: actions/download-artifact@v4
+      - name: Download PHAR artifact from CI
+        uses: dawidd6/action-download-artifact@v3
         with:
-          name: takeout-redate-phar
+          workflow: ci.yml
+          name: takeout-redate-ubuntu-latest-php8.4.phar
           path: .
+      
+      - name: Rename PHAR file
+        run: mv takeout-redate-ubuntu-latest-php8.4.phar takeout-redate.phar
       
       - name: Make PHAR executable
         run: chmod +x takeout-redate.phar
@@ -91,7 +44,7 @@ jobs:
 
   test-phar-macos:
     name: Test PHAR on macOS
-    needs: build-phar
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: macos-latest
     
     steps:
@@ -107,11 +60,15 @@ jobs:
       - name: Install dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
       
-      - name: Download PHAR artifact
-        uses: actions/download-artifact@v4
+      - name: Download PHAR artifact from CI
+        uses: dawidd6/action-download-artifact@v3
         with:
-          name: takeout-redate-phar
+          workflow: ci.yml
+          name: takeout-redate-ubuntu-latest-php8.4.phar
           path: .
+      
+      - name: Rename PHAR file
+        run: mv takeout-redate-ubuntu-latest-php8.4.phar takeout-redate.phar
       
       - name: Make PHAR executable
         run: chmod +x takeout-redate.phar
@@ -121,7 +78,7 @@ jobs:
 
   test-phar-windows:
     name: Test PHAR on Windows
-    needs: build-phar
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: windows-latest
     
     steps:
@@ -137,11 +94,16 @@ jobs:
       - name: Install dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
       
-      - name: Download PHAR artifact
-        uses: actions/download-artifact@v4
+      - name: Download PHAR artifact from CI
+        uses: dawidd6/action-download-artifact@v3
         with:
-          name: takeout-redate-phar
+          workflow: ci.yml
+          name: takeout-redate-ubuntu-latest-php8.4.phar
           path: .
+      
+      - name: Rename PHAR file
+        shell: pwsh
+        run: Move-Item -Path takeout-redate-ubuntu-latest-php8.4.phar -Destination takeout-redate.phar
       
       - name: Run integration tests
         run: composer test -- --filter PharIntegrationTest
