--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     ],
     "scripts": {
         "test": "phpunit",
-        "build": "box compile --allow-composer-check-failure",
+        "build": "box compile --no-parallel --allow-composer-check-failure",
         "test-build": [
             "@test",
             "@build",
