Only build the Phar on Linux

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,10 @@ jobs:
           # Platform-specific testing on Windows and macOS
           - os: windows-latest
             php-version: '8.4'
-            build-phar: true
+            build-phar: false
           - os: macos-latest
             php-version: '8.4'
-            build-phar: true
+            build-phar: false
     
     steps:
       - name: Checkout code
@@ -65,58 +65,9 @@ jobs:
       - name: Run tests
         run: composer test
     
-      - name: Clean Box temp dirs on Windows (pre-build)
-        if: matrix.build-phar && runner.os == 'Windows'
-        shell: pwsh
-        run: |
-          $tempPath = "$env:LOCALAPPDATA\Temp\box"
-          if (Test-Path $tempPath) {
-            Write-Host "Cleaning Box temp directory: $tempPath"
-            Remove-Item -Recurse -Force "$tempPath\*" -ErrorAction SilentlyContinue
-          }
-    
       - name: Build PHAR file
         if: matrix.build-phar
-        shell: bash
-        run: |
-          max_attempts=3
-          attempt=1
-          while [ $attempt -le $max_attempts ]; do
-            echo "Build attempt $attempt of $max_attempts"
-            if composer build; then
-              echo "Build successful on attempt $attempt"
-              exit 0
-            fi
-            if [ $attempt -lt $max_attempts ]; then
-              echo "Build failed. Waiting for file handles to release before cleanup..."
-              if [ "$RUNNER_OS" = "Windows" ]; then
-                # Wait for file handles to be released
-                powershell -Command "Start-Sleep -Seconds 5"
-                # Clean Box temp directories
-                powershell -Command "if (Test-Path \"$env:LOCALAPPDATA\Temp\box\") { Remove-Item -Recurse -Force \"$env:LOCALAPPDATA\Temp\box\*\" -ErrorAction SilentlyContinue }"
-              fi
-              echo "Waiting 5 seconds before retry..."
-              sleep 5
-            fi
-            attempt=$((attempt + 1))
-          done
-          echo "Build failed after $max_attempts attempts"
-          exit 1
-    
-      - name: Wait for file handles to release (Windows)
-        if: matrix.build-phar && runner.os == 'Windows'
-        shell: pwsh
-        run: Start-Sleep -Seconds 5
-    
-      - name: Clean Box temp dirs on Windows (post-build)
-        if: matrix.build-phar && runner.os == 'Windows'
-        shell: pwsh
-        run: |
-          $tempPath = "$env:LOCALAPPDATA\Temp\box"
-          if (Test-Path $tempPath) {
-            Write-Host "Cleaning Box temp directory: $tempPath"
-            Remove-Item -Recurse -Force "$tempPath\*" -ErrorAction SilentlyContinue
-          }
+        run: composer build
     
       - name: Upload PHAR artifact
         if: matrix.build-phar
