--- a/.github/workflows/phar-integration-test.yml
+++ b/.github/workflows/phar-integration-test.yml
@@ -7,10 +7,14 @@ on:
       - completed
   workflow_dispatch:  # Allow manual triggering
 
+permissions:
+  actions: read
+  contents: read
+
 jobs:
   test-phar-linux:
     name: Test PHAR on Linux
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
+    if: ${{ (github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.repository.full_name == github.repository) || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     
     steps:
@@ -44,7 +48,7 @@ jobs:
 
   test-phar-macos:
     name: Test PHAR on macOS
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
+    if: ${{ (github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.repository.full_name == github.repository) || github.event_name == 'workflow_dispatch' }}
     runs-on: macos-latest
     
     steps:
@@ -78,7 +82,7 @@ jobs:
 
   test-phar-windows:
     name: Test PHAR on Windows
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
+    if: ${{ (github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.repository.full_name == github.repository) || github.event_name == 'workflow_dispatch' }}
     runs-on: windows-latest
     
     steps:
