--- a/.github/workflows/phar-integration-test.yml
+++ b/.github/workflows/phar-integration-test.yml
@@ -36,6 +36,19 @@ jobs:
           workflow: ci.yml
           name: takeout-redate-ubuntu-latest-php8.4.phar
           path: .
+          run_id: ${{ github.event.workflow_run.id }}
+      
+      - name: List downloaded files
+        run: ls -la
+      
+      - name: Verify PHAR artifact exists
+        run: |
+          if [ ! -f "takeout-redate-ubuntu-latest-php8.4.phar" ]; then
+            echo "Error: PHAR artifact not found!"
+            echo "Files in directory:"
+            ls -la
+            exit 1
+          fi
       
       - name: Rename PHAR file
         run: mv takeout-redate-ubuntu-latest-php8.4.phar takeout-redate.phar
@@ -70,6 +83,19 @@ jobs:
           workflow: ci.yml
           name: takeout-redate-ubuntu-latest-php8.4.phar
           path: .
+          run_id: ${{ github.event.workflow_run.id }}
+      
+      - name: List downloaded files
+        run: ls -la
+      
+      - name: Verify PHAR artifact exists
+        run: |
+          if [ ! -f "takeout-redate-ubuntu-latest-php8.4.phar" ]; then
+            echo "Error: PHAR artifact not found!"
+            echo "Files in directory:"
+            ls -la
+            exit 1
+          fi
       
       - name: Rename PHAR file
         run: mv takeout-redate-ubuntu-latest-php8.4.phar takeout-redate.phar
@@ -104,6 +130,21 @@ jobs:
           workflow: ci.yml
           name: takeout-redate-ubuntu-latest-php8.4.phar
           path: .
+          run_id: ${{ github.event.workflow_run.id }}
+      
+      - name: List downloaded files
+        shell: pwsh
+        run: Get-ChildItem
+      
+      - name: Verify PHAR artifact exists
+        shell: pwsh
+        run: |
+          if (-not (Test-Path "takeout-redate-ubuntu-latest-php8.4.phar")) {
+            Write-Host "Error: PHAR artifact not found!"
+            Write-Host "Files in directory:"
+            Get-ChildItem
+            exit 1
+          }
       
       - name: Rename PHAR file
         shell: pwsh
