--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - 'v*.*.*'  # Triggers on version tags like v1.0.0, v1.2.3
+      - '*.*.*'  # Triggers on version tags like 1.0.0, 1.2.3, 1.0.0-alpha, 1.0.0-beta.1 (validated in job)
   workflow_run:
     workflows: ["CI", "PHAR Integration Test"]
     types:
@@ -17,7 +17,7 @@ jobs:
   release-version:
     name: Release Version Tag
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     
     steps:
       - name: Checkout code
@@ -28,6 +28,16 @@ jobs:
       - name: Get tag name
         id: tag
         run: echo "name=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+      
+      - name: Validate tag format
+        run: |
+          TAG_NAME="${{ steps.tag.outputs.name }}"
+          # Validate that tag matches semantic versioning pattern (e.g., 1.0.0, 1.2.3, 1.0.0-alpha.1)
+          if ! echo "$TAG_NAME" | grep -qE '^[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9.-]+)?$'; then
+            echo "Error: Tag '$TAG_NAME' does not match semantic versioning pattern (e.g., 1.0.0, 1.2.3, 1.0.0-alpha)"
+            exit 1
+          fi
+          echo "Valid tag format: $TAG_NAME"
       
       - name: Download PHAR artifact
         uses: dawidd6/action-download-artifact@v3
